--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,8 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
     crossorigin="anonymous"
   />
-  <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One&display=swap" rel="stylesheet">
   <title>Beyond The Travel</title>
 </head>
 
