--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,8 @@
     crossorigin="anonymous"
   />
   <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Big+Shoulders+Display:300&display=swap" rel="stylesheet">  
   <title>Beyond The Travel</title>
 </head>
 
